--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,12 +1,18 @@
-<div>
-    <h1><a href="/">Django Application Blog</a></h1>
-</div>
-
-{% for post in posts %}
-    <div>
-        <h1><a href="">{{ post.title }}</a></h1>
-        <p><b>Published:</b> {{ post.published_date }}</p>
-        <p><b>Author:</b> {{ post.author.first_name }} {{ post.author.last_name }}</p>
-        <p>{{ post.text|linebreaks }}</p>
-    </div>
-{% endfor %}
+<html>
+	<head>
+		<title>Django Application Blog</title>
+	</head>
+	<body>
+		<div>
+    		<h1><a href="/">Django Application Blog</a></h1>
+		</div>
+		{% for post in posts %}
+    	<div>
+        	<h1><a href="">{{ post.title }}</a></h1>
+        	<p><b>Published:</b> {{ post.published_date }}</p>
+        	<p><b>Author:</b> {{ post.author.first_name }} {{ post.author.last_name }}</p>
+        	<p>{{ post.text|linebreaks }}</p>
+    	</div>
+		{% endfor %}
+	</body>
+</html>
