--- a/blog/templates/registration/success.html
+++ b/blog/templates/registration/success.html
@@ -1,9 +1,18 @@
 {% extends "base.html" %}
 {% block title %}Registration Successful{% endblock %}
 {% block head %}
- Registration Completed Successfully
 {% endblock %}
 {% block content %}
-    Thank you for registering.
-    <a href="login/">Login</a> 
+    <!-- Container -->
+    <div id="container">
+    	<!-- Header -->
+    	<div id="header">
+        	<div id="branding">        
+            	<h1 id="site-name">Registration Completed Successfully, thank you for registering.</h1>
+	        </div>
+		    <div class="login-link">
+	    		<label>&nbsp;</label><a href="login/">Log in</a>
+	    	</div>
+	    </div>
+	</div>
 {% endblock %}
