--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -3,6 +3,9 @@
     <head>
         <title>Django Application Blog |
         {% block title %}{% endblock %}</title>
+	    <link rel="stylesheet" type="text/css" href="/static/admin/css/base.css" />
+		<link rel="stylesheet" type="text/css" href="/static/admin/css/login.css" />
+		<meta name="robots" content="NONE,NOARCHIVE" />
     </head>
     <body>
         <h1>{% block head %}{% endblock %}</h1>
