--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -1,17 +1,46 @@
 {% extends "base.html" %}
 {% block title %}Login{% endblock %}
-{% block head %}Login{% endblock %}
 {% block content %}
     {% if form.errors %}
         <p>Your username and password didn't match. Please try again.</p>
     {% endif %}
-    <form method="post" action=".">{% csrf_token %}
-        <table border="0">
-            <tr><th><label for="id_username">Username:</label></th><td>{{ form.username }}</td></tr>
-            <tr><th><label for="id_password">Password:</label></th><td>{{ form.password }}</td></tr>
-        </table>
-        <input type="submit" value="Login" />
+<body class=" login" data-admin-utc-offset="3600">
+    <!-- Container -->
+    <div id="container">
+    <!-- Header -->
+    <div id="header">
+        <div id="branding">        
+            <h1 id="site-name"><a href="accounts/login/">User Login</a></h1>
+        </div>
+    </div>
+    <!-- END Header -->
+    <!-- Content -->
+    <div id="content" class="colM">
+        <div id="content-main">
+            <form method="post" id="login-form" action=".">{% csrf_token %}
+            <!-- <input type='hidden' name='csrfmiddlewaretoken' value='kfQceXXWAhJdSnK5NnFiJxUg90zIfzld'/> -->
+        <div class="form-row">
+            <label class="required" for="id_username">Username:</label> <input id="id_username" maxlength="254" name="username" type="text" />
+    </div>
+    <div class="form-row">    
+        <label class="required" for="id_password">Password:</label> <input id="id_password" name="password" type="password" />
         <input type="hidden" name="next" value="/home" />
+    </div>
+  
+    <div class="submit-row">
+        <label>&nbsp;</label><input type="submit" value="Log in" />
+        <label>&nbsp;</label><a href="register/">Register</a>
+    </div>
     </form>
-    <a href="register/">Register</a>
+    <script type="text/javascript">
+        document.getElementById('id_username').focus()
+    </script>
+    </div>  
+        <br class="clear" />
+    </div>
+    <!-- END Content -->
+    <div id="footer"></div>
+    </div>
+    <!-- END Container -->
+</body>
 {% endblock %}
