--- a/blog/templates/registration/home.html
+++ b/blog/templates/registration/home.html
@@ -11,7 +11,7 @@
 	        </div>
 	        <div id="user-tools">        
                 Welcome,
-                <strong>{{ user.username }}</strong>.
+                <strong>{{ user.first_name }} {{user.last_name}}</strong>.
                     <a href="/">View site</a> /                
                 <a href="/admin/password_change/">Change password</a> /
                 <a href="/admin/logout/">Log out</a>
