Changing user home page

--- a/blog/templates/registration/home.html
+++ b/blog/templates/registration/home.html
@@ -21,29 +21,12 @@
     	<!-- END Header -->
     	<!-- Content -->
     	<div id="content" class="colMS">
-        	<h1>Site administration</h1>
+        	<h1>Post Your Blogs</h1>
 			<div id="content-main">
-				<div class="app-auth module">
-        			<table>
-        				<caption>
-            				<p class="section" title="Models in the Authentication and Authorization application">Authentication and Authorization</p>
-        				</caption>
-			            <tr class="model-group">
-			                <th scope="row"><a href="/admin/auth/group/">Groups</a></th>
-            		        <td><a href="/admin/auth/group/add/" class="addlink">Add</a></td>
-		        	        <td><a href="/admin/auth/group/" class="changelink">Change</a></td>
-			            </tr>
-			            <tr class="model-user">
-			                <th scope="row"><a href="/admin/auth/user/">Users</a></th>
-			                <td><a href="/admin/auth/user/add/" class="addlink">Add</a></td>
-			                <td><a href="/admin/auth/user/" class="changelink">Change</a></td>
-			            </tr>
-			        </table>
-	        	</div>
 		        <div class="app-blog module">
-	    	    <table>
+	    	    <table width=700>
 	        		<caption>
-	            		<a href="/admin/blog/" class="section" title="Models in the Blog application">Blog</a>
+	            		<p href="/admin/blog/" class="section" title="Models in the Blog application">Blog</p>
 			        </caption>
 	            	<tr class="model-post">
 		                <th scope="row"><a href="/admin/blog/post/">Posts</a></th>
