Fixing login error

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -23,7 +23,7 @@
             {% else %}
             	<a href="/">View blogs</a> | 
 	            <a href="user/register/">Register</a> |
-    	        <a href="/user/login/">Log in</a>
+    	        <a href="/accounts/login/">Log in</a>
             {% endif %}
         </div>
     </div>
