--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -7,7 +7,7 @@
     <!-- Header -->
     <div id="header">
         <div id="branding">        
-            <h1 id="site-name"><a href="/user/login/">User Login</a></h1>
+            <h1 id="site-name"><a href="/accounts/login/">User Login</a></h1>
         </div>
     </div>
     <!-- END Header -->
