Adding user blog post pages

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -25,7 +25,8 @@
             {% else %}
             	<a href="/">View blogs</a> | 
 	            <a href="user/register/">Register</a> |
-    	        <a href="/accounts/login/">Log in</a>
+    	        <a href="/accounts/login/">User Login</a> | 
+                <a href="/admin/">Admin Login</a>
             {% endif %}
         </div>
     </div>
