--- a/blog/templates/registration/register.html
+++ b/blog/templates/registration/register.html
@@ -18,9 +18,11 @@
         <table border="0">
             {{ form.as_table }}
         </table>
-        <div class="submit-row">
-        	<label>&nbsp;</label><input type="submit" value="Register" />
-        	<label>&nbsp;</label><a href="/accounts/login/">Log in</a>
-        </div>
+        <table>
+            <div class="submit-row">
+                <label>&nbsp;</label><input type="submit" value="Register" />
+                <label>&nbsp;</label><a href="/accounts/login/">Log in</a>
+            </div>
+        </table>
     </form>
 {% endblock %}
