Defined custom login function

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -25,7 +25,7 @@
             {% else %}
             	<a href="/">View blogs</a> | 
 	            <a href="user/register/">Register</a> |
-    	        <a href="/accounts/login/">User Login</a> | 
+    	        <a href="/user/home/">User Login</a> | 
                 <a href="/admin/">Admin Login</a>
             {% endif %}
         </div>
