--- a/blog/templates/registration/success.html
+++ b/blog/templates/registration/success.html
@@ -11,7 +11,7 @@
             	<h1 id="site-name">Registration Completed Successfully, thank you for registering.</h1>
 	        </div>
 		    <div class="login-link">
-	    		<label>&nbsp;</label><a href="/accounts/login/">Log in</a>
+	    		<label>&nbsp;</label><a href="/user/home/">Log in</a>
 	    	</div>
 	    </div>
 	</div>
