--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -1,11 +1,26 @@
 {% extends "base.html" %}
 {% block title %}User Login{% endblock %}
 {% block content %}
-<!-- {% if csrf_token != "" or csrf_token != None %}
-    <script type="text/javascript">
-        window.location.href = "/user/home"
-    </script>
-{% endif %} -->
+<script type="text/javascript">
+    function IsEmpty(){
+        if(document.getElementById("id_username").value.length == 0){
+            document.getElementById('errorMsgUname').innerHTML = "Username is required";
+            document.getElementById('id_username').focus()
+            return false
+        }
+        if(document.getElementById("id_password").value.length == 0){
+            document.getElementById("errorMsgUname").innerHTML = "";
+            document.getElementById('errorMsgPwd').innerHTML = "Password is required";
+            document.getElementById('id_password').focus()
+            return false
+        }
+        else{
+            document.getElementById("errorMsgUname").innerHTML = "";
+            document.getElementById("errorMsgPwd").innerHTML = "";
+            return true
+        }
+    }
+</script>
 
 <body class="login" data-admin-utc-offset="3600">
     <!-- Container -->
@@ -13,7 +28,7 @@
     <!-- Header -->
     <div id="header">
         <div id="branding">        
-            <h1 id="site-name"><a href="/accounts/login/">User Login</a></h1>
+            <h1 id="site-name"><a href="/user/home/">User Login</a></h1>
         </div>
     </div>
     <!-- END Header -->
@@ -21,28 +36,28 @@
     <div id="content" class="colM">
         <div id="content-main">
             {% if form.errors %}
-                <p>Your username and password didn't match. Please try again.</p>
+                <p><font color="red">Your username and password didn't match. Please try again.</font></p>
             {% endif %}
-            <form method="post" id="login-form" action=".">{% csrf_token %}
-            <!-- <input type='hidden' name='csrfmiddlewaretoken' value='kfQceXXWAhJdSnK5NnFiJxUg90zIfzld'/> -->
-        <div class="form-row">
-            <label class="required" for="id_username">Username:</label> <input id="id_username" maxlength="254" name="username" type="text" />
-    </div>
-    <div class="form-row">    
-        <label class="required" for="id_password">Password:</label> <input id="id_password" name="password" type="password" />
-        <input type="hidden" name="next" value="/home" />
-    </div>
-  
-    <div class="submit-row">
-        <label>&nbsp;</label><input type="submit" value="Log in" />
-        <label>&nbsp;</label><a href="/user/register/">Register</a>
-    </div>
-    </form>
-    <script type="text/javascript">
-        document.getElementById('id_username').focus()
-    </script>
-    </div>  
-        <br class="clear" />
+            <form method="post" id="login-form" onsubmit="return IsEmpty();" action=".">{% csrf_token %}
+            <div class="form-row">
+                <label class="required" for="id_username">Username:</label> <input id="id_username" maxlength="254" name="username" type="text" />
+                <span id="errorMsgUname" style="color:red;"></span>
+            </div>
+            <div class="form-row">    
+                <label class="required" for="id_password">Password:</label> <input id="id_password" name="password" type="password" />
+                <span id="errorMsgPwd" style="color:red;"></span>
+                <input type="hidden" name="next" value="/user/home" />
+            </div>
+            <div class="submit-row">
+                <label>&nbsp;</label><input type="submit" value="Log in" />
+                <label>&nbsp;</label><a href="/user/register/">Register</a>
+            </div>
+            </form>
+            <script type="text/javascript">
+                document.getElementById('id_username').focus()
+            </script>
+        </div>  
+            <br class="clear" />
     </div>
     <!-- END Content -->
     <div id="footer"></div>
