--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -36,7 +36,7 @@
     <div id="content" class="colM">
         <div id="content-main">
             {% if form.errors %}
-                <p><font color="red">Your username and password didn't match. Please try again.</font></p>
+                <p style="color:red;">Your username and password didn't match. Please try again.</p>
             {% endif %}
             <form method="post" id="login-form" onsubmit="return IsEmpty();" action=".">{% csrf_token %}
             <div class="form-row">
