--- a/blog/templates/registration/register.html
+++ b/blog/templates/registration/register.html
@@ -21,7 +21,7 @@
         <table>
             <div class="submit-row">
                 <label>&nbsp;</label><input type="submit" value="Register" />
-                <label>&nbsp;</label><a href="/home/">Log in</a>
+                <label>&nbsp;</label><a href="/user/home/">Log in</a>
             </div>
         </table>
     </form>
