--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -4,6 +4,15 @@
 <script type="text/javascript">
     function IsEmpty(){
         if(document.getElementById("id_username").value.length == 0){
+            if(document.getElementById("id_password").value.length == 0){            
+            document.getElementById('errorMsgUname').innerHTML = "Username is required";
+            document.getElementById('errorMsgPwd').innerHTML = "Password is required";
+            document.getElementById('id_username').focus()
+            return false
+            }
+        }
+        if(document.getElementById("id_username").value.length == 0){
+            document.getElementById("errorMsgPwd").innerHTML = "";
             document.getElementById('errorMsgUname').innerHTML = "Username is required";
             document.getElementById('id_username').focus()
             return false
